--- a/ApplicationWeb/styleSheet/style.css
+++ b/ApplicationWeb/styleSheet/style.css
@@ -1,4 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face {
     font-family: "Edwardian Script";
     src: url(Font/ITCEDSCR.TTF);
+}
+
+:root{
+    --primary-color: white;
+    --second-color: black;
+    --third-color: #E0AA3E;
+}
+
+header{
+    background-color: var(--second-color);
+    height: 14vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid 1vh var(--third-color);
+}
+
+h1{
+    color: var(--third-color);
+    font-size: 3em;
+}
+
+.wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+}
+
+.wrapper-left, .wrapper-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper-h1{
+    width: 30vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
