--- a/ApplicationWeb/styleSheet/style.css
+++ b/ApplicationWeb/styleSheet/style.css
@@ -1,8 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@font-face {
-    font-family: "Edwardian Script";
-    src: url(Font/ITCEDSCR.TTF);
-}
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 
 :root{
     --primary-color: white;
@@ -22,6 +18,7 @@ header{
 h1{
     color: var(--third-color);
     font-size: 3em;
+    font-family: "Great Vibes", cursive;
 }
 
 .wrapper{
@@ -42,4 +39,8 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.wrapper-img{
+    width: 100%;
 }
