--- a/ApplicationWeb/styleSheet/style.css
+++ b/ApplicationWeb/styleSheet/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face{
     font-family: "Edwardian Script ITC";
     src: url(Font/ITCEDSCR.TTF) format(truetype);
@@ -47,4 +48,64 @@ h1{
 
 .wrapper-img{
     height: 12vh;
+}
+
+.card{
+    border: solid 5px var(--third-color);
+    background: var(--second-color);
+}
+
+.card-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 5vh;
+}
+
+.card-body{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.card-body p{
+    font-size: 1.2em;
+    color: var(--primary-color);
+    font-weight: 100;
+}
+
+.card-body h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 3em;
+    color: var(--primary-color);
+}
+
+a{
+    text-decoration: none;
+}
+
+.card-container-bottom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5vh;
+    width: 80vw;
+    
+}
+
+.bottom-card{
+    background-color: var(--second-color);
+    border: solid 5px var(--third-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 77vw;
+    height: 15vh;
+}
+
+.content{
+    width: 80vw;
+    margin: 0 auto;
 }
